kms/kustomize/kms/overlays/local/vault-kms/kms/ingress.yml
#
# Copyright SecureKey Technologies Inc. All Rights Reserved.
#
# SPDX-License-Identifier: Apache-2.0
#

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault-kms
  labels:
    app: kms
spec:
  tls:
  - hosts:
      - $(VAULT_SERVICE_NAME).||DOMAIN||
    secretName: $(VAULT_INGRESS_TLS_SECRET)
  rules:
  - host: $(VAULT_SERVICE_NAME).||DOMAIN||
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: vault-kms
            port:
              name: http
